--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "^13.5.4",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-fontawesome": "^1.7.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "latest",
